--- a/PASCUAL,_KEN_LEONARD_Hands_on_Activity_2_1_CPE311.ipynb
+++ b/PASCUAL,_KEN_LEONARD_Hands_on_Activity_2_1_CPE311.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWQjucX9WYb78of25U2hoI",
+      "authorship_tag": "ABX9TyN/esz9+QFfVEMin5W+NbKQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##"
+        "Hatdog"
       ],
       "metadata": {
         "id": "Y-4scqKRpMPX"
