--- a/PASCUAL,_KEN_LEONARD_Hands_on_Activity_2_1_CPE311.ipynb
+++ b/PASCUAL,_KEN_LEONARD_Hands_on_Activity_2_1_CPE311.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/esz9+QFfVEMin5W+NbKQ",
+      "authorship_tag": "ABX9TyORyrl46JEYbb4/zDGaCKqM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hatdog"
+        "In solving the Tower of Hanoi problem, I utilized a top-down decomposition approach to come up with a solution.\n",
+        "\n",
+        "I viewed that this is"
       ],
       "metadata": {
         "id": "Y-4scqKRpMPX"
@@ -93,28 +95,10 @@
         "# Contributed By Harshit Agrawal\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tNWiRQnqulbn",
-        "outputId": "266a447f-4d72-42e1-c74d-9378db100186"
+        "id": "tNWiRQnqulbn"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Move disk 1 from rod A to rod C\n",
-            "Move disk 2 from rod A to rod B\n",
-            "Move disk 1 from rod C to rod B\n",
-            "Move disk 3 from rod A to rod C\n",
-            "Move disk 1 from rod B to rod A\n",
-            "Move disk 2 from rod B to rod C\n",
-            "Move disk 1 from rod A to rod C\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -250,36 +234,10 @@
         "tohIterative(num_of_disks, src, aux, dest)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RfmTJbZV2nRH",
-        "outputId": "cedf0b08-96fa-452a-8513-4d5c5d6450ff"
+        "id": "RfmTJbZV2nRH"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Move the disk 1 from 'S' to 'A'\n",
-            "Move the disk 2 from 'S' to 'D'\n",
-            "Move the disk 1 from 'A' to 'D'\n",
-            "Move the disk 3 from 'S' to 'A'\n",
-            "Move the disk 1 from 'D' to 'S'\n",
-            "Move the disk 2 from 'D' to 'A'\n",
-            "Move the disk 1 from 'S' to 'A'\n",
-            "Move the disk 4 from 'S' to 'D'\n",
-            "Move the disk 1 from 'A' to 'D'\n",
-            "Move the disk 2 from 'A' to 'S'\n",
-            "Move the disk 1 from 'D' to 'S'\n",
-            "Move the disk 3 from 'A' to 'D'\n",
-            "Move the disk 1 from 'S' to 'A'\n",
-            "Move the disk 2 from 'S' to 'D'\n",
-            "Move the disk 1 from 'A' to 'D'\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
