--- a/PASCUAL,_KEN_LEONARD_Hands_on_Activity_2_1_CPE311.ipynb
+++ b/PASCUAL,_KEN_LEONARD_Hands_on_Activity_2_1_CPE311.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMk0SO0aNQ0Rnw402Fxn0DB",
+      "authorship_tag": "ABX9TyNvFHZ0AzAs1XY4LEtoDcEk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
       "source": [
         "In solving the Tower of Hanoi problem, I utilized a top-down decomposition approach to come up with a solution.\n",
         "\n",
-        "I viewed that this is IDONTEVENKNOWANYMOREBROOOHUHU>_<"
+        "I viewed that this is alright last na"
       ],
       "metadata": {
         "id": "Y-4scqKRpMPX"
