--- a/PASCUAL, KEN LEONARD_Module_1_Lab_Exercise.ipynb
+++ b/PASCUAL, KEN LEONARD_Module_1_Lab_Exercise.ipynb
@@ -80,6 +80,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from re import X\n",
         "#Implementation of Fibonacci Series using Memoization\n",
         "\"\"\" The Fibonacci Series is a series of numbers in which each number\n",
         "    is the sum of the preceding two numbers.\n",
@@ -90,15 +91,60 @@
         "    - If n equals 1, return 0\n",
         "    - If n equals 2, return 1\n",
         "    - If current element is not in memo, add to memoy by recursive call for previous function and add. \"\"\"\n",
+        "def fibo(x, value):\n",
+        "  if x == 1:\n",
+        "    return 0\n",
+        "  if x == 2:\n",
+        "    return 1\n",
+        "  if x not in ThisIsADict:\n",
+        "    value[x] = fibo(x-1, value) + fibo(x-2, value)\n",
+        "  return value[x]\n",
+        "\n",
+        "ThisIsADict = {}\n",
+        "give = int(input(\"number of terms: \"))\n",
+        "fibo(give, ThisIsADict)\n",
+        "\n",
+        "\n",
+        "for val in ThisIsADict.values():\n",
+        "  print(val)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "#Implementation of Factorial of a number N using Memoization"
       ],
       "metadata": {
-        "id": "8_TsrouUJQSF"
+        "id": "8_TsrouUJQSF",
+        "outputId": "04c99f67-817c-477d-d9fa-903d8a561bc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "number of terms: 3\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'set' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-35-edf598b37648>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mThisIsADict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mgive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"number of terms: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mfibo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mThisIsADict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-35-edf598b37648>\u001b[0m in \u001b[0;36mfibo\u001b[0;34m(x, value)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mThisIsADict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfibo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfibo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mThisIsADict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support item assignment"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -126,10 +172,29 @@
         "#Implementation of Factorial of a number N using Tabulation"
       ],
       "metadata": {
-        "id": "Skjbt78O9ele"
+        "id": "Skjbt78O9ele",
+        "outputId": "7539ba60-3f5b-4855-f105-04d4e61ed803",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' Fibonacci Series can be implemented using Tabulation using the following steps:\\n    - Declare the function and take the number whose Fibonacci Series is to be printed.\\n    - Initialize the list and input the values 0 and 1 in it.\\n    - Iterate over the range of 2 to n+1.\\n    - Append the list with the sum of the previous two values of the list.\\n    - Return the list as output. '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -174,7 +239,7 @@
       "metadata": {
         "id": "h5wXf7I_3PKR"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -189,7 +254,7 @@
       "metadata": {
         "id": "KbtYBVt7POFj"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -210,7 +275,7 @@
       "metadata": {
         "id": "DhsN3wqfPgBY"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -225,7 +290,7 @@
       "metadata": {
         "id": "izVtHvhQSVzT"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -242,7 +307,7 @@
       "metadata": {
         "id": "MTaJ-uLESnX2"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -260,9 +325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zFXivAOETE9l",
-        "outputId": "cf47fc10-43dc-4349-cf2e-41e1137d1fe6"
+        "outputId": "998b2183-4d07-4d99-be34-091b9f282174"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,10 +363,29 @@
         "\n"
       ],
       "metadata": {
-        "id": "wK951cvf87l2"
+        "id": "wK951cvf87l2",
+        "outputId": "4280b886-a02c-47d2-ccd1-c377655c3343",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "' You are given a set of N courses.\\n    Courses will be defined as (code, units).\\n    Select the maximum set of courses a student can hve.\\n    Maximum units allowed is based on input with a max of 24\\n    default of 18. '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -326,10 +410,27 @@
         "    print(element)"
       ],
       "metadata": {
-        "id": "F_ag3nClZsL9"
+        "id": "F_ag3nClZsL9",
+        "outputId": "b05199d6-0793-4c2b-87cf-e65a8d9ae1ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -344,10 +445,22 @@
         "print(fibTab(6))"
       ],
       "metadata": {
-        "id": "RJkOBPmrZv2W"
+        "id": "RJkOBPmrZv2W",
+        "outputId": "e076b3cb-bd79-41a0-f889-e9a1ff66f273",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 1, 2, 3, 5, 8]\n"
+          ]
+        }
+      ]
     }
   ]
 }
