what I've done so far

--- a/PASCUAL, KEN LEONARD_Module_1_Lab_Exercise.ipynb
+++ b/PASCUAL, KEN LEONARD_Module_1_Lab_Exercise.ipynb
@@ -101,9 +101,11 @@
         "  return value[x]\n",
         "\n",
         "ThisIsADict = {}\n",
+        "\n",
+        "ThisIsADict[1] = fibo(1, ThisIsADict)\n",
+        "ThisIsADict[2] = fibo(2, ThisIsADict)\n",
         "give = int(input(\"number of terms: \"))\n",
         "fibo(give, ThisIsADict)\n",
-        "\n",
         "\n",
         "for val in ThisIsADict.values():\n",
         "  print(val)\n",
@@ -117,31 +119,28 @@
       ],
       "metadata": {
         "id": "8_TsrouUJQSF",
-        "outputId": "04c99f67-817c-477d-d9fa-903d8a561bc1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 359
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b11602da-e0af-49fa-b34f-5f1cff7df121"
       },
-      "execution_count": 35,
+      "execution_count": 40,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "number of terms: 3\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'set' object does not support item assignment",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-35-edf598b37648>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mThisIsADict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mgive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"number of terms: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mfibo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mThisIsADict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-35-edf598b37648>\u001b[0m in \u001b[0;36mfibo\u001b[0;34m(x, value)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mThisIsADict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfibo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfibo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mThisIsADict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support item assignment"
+            "number of terms: 10\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
           ]
         }
       ]
@@ -173,11 +172,11 @@
       ],
       "metadata": {
         "id": "Skjbt78O9ele",
-        "outputId": "7539ba60-3f5b-4855-f105-04d4e61ed803",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        }
+        },
+        "outputId": "7539ba60-3f5b-4855-f105-04d4e61ed803"
       },
       "execution_count": 11,
       "outputs": [
@@ -364,11 +363,11 @@
       ],
       "metadata": {
         "id": "wK951cvf87l2",
-        "outputId": "4280b886-a02c-47d2-ccd1-c377655c3343",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "outputId": "4280b886-a02c-47d2-ccd1-c377655c3343"
       },
       "execution_count": 8,
       "outputs": [
@@ -411,10 +410,10 @@
       ],
       "metadata": {
         "id": "F_ag3nClZsL9",
-        "outputId": "b05199d6-0793-4c2b-87cf-e65a8d9ae1ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b05199d6-0793-4c2b-87cf-e65a8d9ae1ba"
       },
       "execution_count": 25,
       "outputs": [
@@ -446,10 +445,10 @@
       ],
       "metadata": {
         "id": "RJkOBPmrZv2W",
-        "outputId": "e076b3cb-bd79-41a0-f889-e9a1ff66f273",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e076b3cb-bd79-41a0-f889-e9a1ff66f273"
       },
       "execution_count": 10,
       "outputs": [
