--- a/PASCUAL,KEN_LEONARD_Hands_on_Activity_2_1_Dynamic_Programming_1.ipynb
+++ b/PASCUAL,KEN_LEONARD_Hands_on_Activity_2_1_Dynamic_Programming_1.ipynb
@@ -361,7 +361,12 @@
       "cell_type": "markdown",
       "source": [
         "**Code Analysis** </br>\n",
-        "All these programs"
+        "All these programs run in almost the same way to solve the problem.\n",
+        "For recursion, it runs through each item and checks the weight of each of them. If the weight of the object still first the criteria to not be able to exceed the limit, it is included. Otherwise, it gets excluded and the algorithm moves onto the next item to do the same.\n",
+        "\n",
+        "For dynamic programming, it builds a tables first to represent the items, weights, and value of each item. Like recursion, it also runs through each item to check the weight and value of each item. However, these values are now accessible through a table, making it easier for the algorithm to compare values. It is considered a bottom-up approach as it starts to solve the minor details of the problem first, then works towards the actual solution.\n",
+        "\n",
+        "For memoization, it also builds a table and stores past computed results. However, it runs a bit more similarly like recursion except it also stores whatever it has computed already instead of running it every step of the way. In other words, it seems to work like recursion with \"storage\"."
       ],
       "metadata": {
         "id": "-UXSSblDcF8T"
@@ -414,10 +419,10 @@
       "id": "ed2f6186",
       "metadata": {
         "id": "ed2f6186",
-        "outputId": "b15db974-64f6-48a1-971e-e779aa922175",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b15db974-64f6-48a1-971e-e779aa922175"
       },
       "outputs": [
         {
@@ -503,11 +508,11 @@
         "print(\"Bottom-Up DP Output:\", DP_knapSack(w, wt, val, n))"
       ],
       "metadata": {
-        "id": "7JfCqoaKIkND",
-        "outputId": "8566700f-a5d8-4516-a7f3-fe9aabedecbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7JfCqoaKIkND",
+        "outputId": "8566700f-a5d8-4516-a7f3-fe9aabedecbd"
       },
       "id": "7JfCqoaKIkND",
       "execution_count": 10,
@@ -567,11 +572,11 @@
         "print(\"Memoization Output:\", mem_knapSack(wt, val, w, n, memo))\n"
       ],
       "metadata": {
-        "id": "ddHT5_UKItms",
-        "outputId": "74d8a5eb-981d-4600-8728-233614b2aeb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ddHT5_UKItms",
+        "outputId": "74d8a5eb-981d-4600-8728-233614b2aeb8"
       },
       "id": "ddHT5_UKItms",
       "execution_count": 9,
@@ -611,10 +616,10 @@
       "id": "745871be",
       "metadata": {
         "id": "745871be",
-        "outputId": "19443d3f-6935-4893-ddb0-b44adcca1889",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19443d3f-6935-4893-ddb0-b44adcca1889"
       },
       "outputs": [
         {
@@ -710,10 +715,10 @@
       "id": "86eef507",
       "metadata": {
         "id": "86eef507",
-        "outputId": "90b22656-bddc-42ad-b5ae-8f3c3efdb33b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "90b22656-bddc-42ad-b5ae-8f3c3efdb33b"
       },
       "outputs": [
         {
@@ -808,10 +813,10 @@
       "id": "73b071b6",
       "metadata": {
         "id": "73b071b6",
-        "outputId": "f7fb359b-6a4e-4765-a20f-17f7e1dfc506",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f7fb359b-6a4e-4765-a20f-17f7e1dfc506"
       },
       "outputs": [
         {
