--- a/PASCUAL,KEN_LEONARD_Hands_on_Activity_2_1_Dynamic_Programming_1.ipynb
+++ b/PASCUAL,KEN_LEONARD_Hands_on_Activity_2_1_Dynamic_Programming_1.ipynb
@@ -420,7 +420,8 @@
       "metadata": {
         "id": "ed2f6186",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b15db974-64f6-48a1-971e-e779aa922175"
       },
@@ -509,7 +510,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "7JfCqoaKIkND",
         "outputId": "8566700f-a5d8-4516-a7f3-fe9aabedecbd"
@@ -573,7 +575,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ddHT5_UKItms",
         "outputId": "74d8a5eb-981d-4600-8728-233614b2aeb8"
@@ -617,7 +620,8 @@
       "metadata": {
         "id": "745871be",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "19443d3f-6935-4893-ddb0-b44adcca1889"
       },
@@ -716,7 +720,8 @@
       "metadata": {
         "id": "86eef507",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "90b22656-bddc-42ad-b5ae-8f3c3efdb33b"
       },
@@ -814,7 +819,8 @@
       "metadata": {
         "id": "73b071b6",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "f7fb359b-6a4e-4765-a20f-17f7e1dfc506"
       },
@@ -911,16 +917,26 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9627d18c",
-      "metadata": {
-        "id": "9627d18c"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "#type your answer here"
-      ]
+        "It can be concluded that recursion and dynamic programming are very effective ways in optimizing solutions, with dynamic programming giving the benefit of being able to store the computed values for a solution.\n",
+        "\n",
+        "I realized that their difference lies in their priorities in terms of ease of use, efficiency in terms of space, and time. Each of them provides up to 2 of these three ideas, and I think all of them can't fill all three. So in solving a problem, one should decide what to prioritize to design a fitting algorithm that is considered \"efficient\" as a solution.\n"
+      ],
+      "metadata": {
+        "id": "2zimavguOEtv"
+      },
+      "id": "2zimavguOEtv"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OqtYr2xPOGRG"
+      },
+      "id": "OqtYr2xPOGRG",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
