--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaDFdHVVTfeZu4T0HlIU/d",
+      "authorship_tag": "ABX9TyPtuz+ym4eO3K90fYbZeadV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Iteration 1"
+        "### Iteration 1\n",
+        "\n",
+        "Understanding the basics of the problem"
       ],
       "metadata": {
         "id": "_iczEtD3tjq-"
@@ -114,7 +116,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Problem Identification"
+        "#### Problem Identification\n",
+        "\n",
+        "\n",
+        "*   11 Bus Transit Routes\n",
+        "*   3 Railway Transit Lines\n",
+        "\n"
       ],
       "metadata": {
         "id": "Gr3CDpZQtqUX"
@@ -132,6 +139,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "*   Identifying all bus stops for each bus transit route\n",
+        "*   Identifying all stations for each railway transit line\n"
+      ],
+      "metadata": {
+        "id": "TIxNBPFPxZzB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Pattern Recognition"
       ],
       "metadata": {
@@ -141,10 +160,33 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "*   Bus stops within a bus route are more frequent than train stations within a train line\n",
+        "*   Some bus routes have similar paths to train lines\n",
+        "*   Some train stations are near to bus stops\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8V6YbAyCyCMi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Abstraction"
       ],
       "metadata": {
         "id": "GfurMmnJtzEg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   Determining"
+      ],
+      "metadata": {
+        "id": "8uUYYozsBpF7"
       }
     },
     {
