--- a/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
+++ b/CaseStudy1/CPE311_CaseStudy1_Pascual,Moldez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtuz+ym4eO3K90fYbZeadV",
+      "authorship_tag": "ABX9TyNP1LacCNjDEaZwwaFwIxAc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,12 +290,88 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import heapq\n",
+        "\n",
+        "def dijkstra(graph, start, end):\n",
+        "    \"\"\"Finds the shortest path using Dijkstra's algorithm\"\"\"\n",
+        "    queue = [(0, start, [])]  # (cost, current station, path)\n",
+        "    visited = set()\n",
+        "\n",
+        "    while queue:\n",
+        "        cost, node, path = heapq.heappop(queue)\n",
+        "\n",
+        "        if node in visited:\n",
+        "            continue\n",
+        "\n",
+        "        visited.add(node)\n",
+        "        path = path + [node]\n",
+        "\n",
+        "        if node == end:\n",
+        "            return cost, path\n",
+        "\n",
+        "        for neighbor, travel_cost in graph.get(node, {}).items():\n",
+        "            if neighbor not in visited:\n",
+        "                heapq.heappush(queue, (cost + travel_cost, neighbor, path))\n",
+        "\n",
+        "    return float(\"inf\"), []  # No path found\n",
+        "\n",
+        "# Metro Manila transit network graph (simplified, using estimated fares/time in minutes)\n",
+        "metro_graph = {\n",
+        "    \"Monumento\": {\"Balintawak\": 5, \"EDSA Carousel\": 10},\n",
+        "    \"Balintawak\": {\"Monumento\": 5, \"Roosevelt\": 5},\n",
+        "    \"Roosevelt\": {\"Balintawak\": 5, \"North Avenue\": 8},\n",
+        "    \"North Avenue\": {\"Roosevelt\": 8, \"Quezon Avenue\": 5, \"EDSA Carousel\": 10},\n",
+        "    \"Quezon Avenue\": {\"North Avenue\": 5, \"Kamuning\": 5},\n",
+        "    \"Kamuning\": {\"Quezon Avenue\": 5, \"Cubao\": 5},\n",
+        "    \"Cubao\": {\"Kamuning\": 5, \"Santolan\": 10, \"EDSA Carousel\": 12},\n",
+        "    \"Santolan\": {\"Cubao\": 10, \"Katipunan\": 5},\n",
+        "    \"Katipunan\": {\"Santolan\": 5, \"Anonas\": 5},\n",
+        "    \"Anonas\": {\"Katipunan\": 5, \"EDSA Carousel\": 10},\n",
+        "    \"EDSA Carousel\": {\"Monumento\": 10, \"North Avenue\": 10, \"Cubao\": 12, \"Anonas\": 10, \"Taft Avenue\": 15},\n",
+        "    \"Taft Avenue\": {\"EDSA Carousel\": 15, \"Magallanes\": 5},\n",
+        "    \"Magallanes\": {\"Taft Avenue\": 5, \"Ayala\": 5},\n",
+        "    \"Ayala\": {\"Magallanes\": 5, \"Buendia\": 5},\n",
+        "    \"Buendia\": {\"Ayala\": 5, \"Guadalupe\": 5},\n",
+        "    \"Guadalupe\": {\"Buendia\": 5, \"Boni\": 5},\n",
+        "    \"Boni\": {\"Guadalupe\": 5, \"Shaw Boulevard\": 5},\n",
+        "    \"Shaw Boulevard\": {\"Boni\": 5, \"Ortigas\": 5},\n",
+        "    \"Ortigas\": {\"Shaw Boulevard\": 5, \"Santolan-Annapolis\": 5},\n",
+        "    \"Santolan-Annapolis\": {\"Ortigas\": 5, \"EDSA Taft\": 10},\n",
+        "}\n",
+        "\n",
+        "# User input\n",
+        "start = input(\"Enter start station: \")\n",
+        "destination = input(\"Enter destination station: \")\n",
+        "\n",
+        "# Finding the shortest route\n",
+        "cost, path = dijkstra(metro_graph, start, destination)\n",
+        "\n",
+        "# Output the results\n",
+        "if path:\n",
+        "    print(f\"Shortest route from {start} to {destination}: {' -> '.join(path)} (Time: {cost} mins)\")\n",
+        "else:\n",
+        "    print(\"No route found!\")\n"
+      ],
       "metadata": {
-        "id": "ie4frCk2rTTR"
+        "id": "ie4frCk2rTTR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c66c3ba-c268-429e-e828-d19ed1276c52"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter start station: Monumento\n",
+            "Enter destination station: Ortigas\n",
+            "Shortest route from Monumento to Ortigas: Monumento -> EDSA Carousel -> Taft Avenue -> Magallanes -> Ayala -> Buendia -> Guadalupe -> Boni -> Shaw Boulevard -> Ortigas (Time: 60 mins)\n"
+          ]
+        }
+      ]
     }
   ]
 }
